--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">EspressoDemo</string>
+    <string name="not_valid_email">"Not a valid email id "</string>
+    <string name="password_incorrect_message">Password field should not be empty</string>
 </resources>
